# franka-ws

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  README.md
docs/superpowers/plans/: 2026-05-31-openarm-style-franka-policy-stack.md  2026-06-01-franka-policy-observers.md  2026-06-03-action-test-runtime.md  2026-06-03-cartesian-pose-runtime.md
docs/superpowers/specs/: 2026-06-03-action-test-runtime-design.md  2026-06-09-ik-controller-simplification-design.md
install/: local_setup.sh  setup.sh
install/libfranka/lib/: libfranka.so.0.15  libfranka.so.0.15.0
install/realsense2_camera/include/: align_depth_filter.h  base_realsense_node.h  constants.h  context_singleton_wrapper.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  pointcloud_filter.h  profile_manager.h  realsense_node_factory.h  ros_node_base.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
src/: check_uarm_jitter.py
src/franka_deploy/: package.xml  setup.cfg  setup.py
src/franka_deploy/config/: fr3_servo.yaml  vla_planner.yaml  vla_servo.yaml
src/franka_deploy/franka_deploy/: action_mapping.py  vla_planner_node.py  vla_servo_node.py
src/franka_deploy/launch/: openvla_franka.launch.py
src/franka_deploy/scripts/: openvla_quant_server.py
src/franka_deploy/test/: test_action_mapping.py  test_launch_defaults.py
src/franka_policy_controller/: CMakeLists.txt  franka_policy_controller.xml  franka_policy_controller_plugin.xml  package.xml
src/franka_policy_controller/config/: franka_bringup_cartesian_pose_controllers.yaml  franka_bringup_policy_controllers.yaml  franka_policy_controller.yaml
src/franka_policy_controller/include/franka_policy_controller/: franka_cartesian_pose_controller.hpp  franka_policy_controller.hpp  policy_position_controller.hpp  twist_ik_controller.hpp
src/franka_policy_controller/src/: franka_cartesian_pose_controller.cpp  franka_policy_controller.cpp  policy_position_controller.cpp  twist_ik_controller.cpp
src/franka_policy_controller/test/: test_load_policy_position_controller.cpp
src/franka_policy_runtime/: package.xml  setup.cfg  setup.py
src/franka_policy_runtime/config/: action_test.yaml  anygrasp_runtime.yaml  franka_bringup_policy_controllers.yaml  franka_policy_runtime.yaml
src/franka_policy_runtime/franka_policy_runtime/: __init__.py  action_queue.py  action_test.py  action_test_node.py  base_node.py  bc_cube_stack_node.py  cartesian_backend.py  observers.py  policy_runtime_node.py  reference.py  runtime_config.py  tcp_pose.py  vla_node.py
src/franka_policy_runtime/franka_policy_runtime/observers/: __init__.py  anygrasp.py  base.py  bc_isaaclab.py  color_cube.py  openvla.py
src/franka_policy_runtime/franka_policy_runtime/runtimes/: action_test_node.py  anygrasp_node.py  base_node.py  bc_cube_stack_node.py  vla_node.py
src/franka_policy_runtime/franka_policy_runtime/utils/: __init__.py  pose_math.py
src/franka_policy_runtime/launch/: action_test.launch.py  anygrasp.launch.py  bc_cube_stack.launch.py  franka_policy_runtime.launch.py  policy_stack.launch.py  robot_base.launch.py  vla_policy.launch.py
src/franka_policy_runtime/test/: test_action_queue.py  test_action_test.py  test_cartesian_backend.py  test_cartesian_controller_launch.py  test_observers.py  test_policy_launch_files.py  test_policy_runtime_executor.py  test_runtime_config.py  test_tcp_pose.py
src/franka_telep/: CMakeLists.txt  franka_telep_controllers.xml  package.xml  setup.cfg  setup.py
src/franka_telep/config/: franka_telep.yaml  uarm_teleop_controllers.yaml
src/franka_telep/franka_telep/: __init__.py  episode_replay_node.py  franka_home_node.py  franka_mapping.py  franka_teleop_node.py  openvla_dataset.py  openvla_recorder_node.py  uarm_leader_publisher.py  urdf_joint_state_node.py  zhonglin_protocol.py  zhonglin_servo_reader_node.py
src/franka_telep/include/franka_telep/: uarm_follower_controller.hpp
src/franka_telep/launch/: episode_replay.launch.py  episode_replay_preview.launch.py  fr3_urdf_preview.launch.py  uarm_openvla_collect.launch.py  uarm_teleop_fr3.launch.py
src/franka_telep/openvla_rlds/: README.md  openvla_registration.py
src/franka_telep/openvla_rlds/franka_teleop_dataset/: __init__.py  franka_teleop_dataset_dataset_builder.py
src/franka_telep/rviz/: fr3_teleop_preview.rviz
src/franka_telep/scripts/: episode_replay  franka_home_initializer  franka_teleop  openvla_dataset_recorder  uarm_leader_publisher  urdf_joint_state  zhonglin_servo_reader
src/franka_telep/src/: uarm_follower_controller.cpp
src/franka_telep/test/: test_mapping.py  test_openvla_dataset.py  test_urdf_preview.py
src/franka_telep/urdf/: fr3_teleop_preview.urdf
src/handeye_calibration/: package.xml  setup.py
src/handeye_calibration/handeye_calibration/: __init__.py  aruco_camera_calibrator.py  aruco_handeye_calibrator.py  board_detection.py  calibration_config.py  grasp_logic.py  (+4 more)
src/motion_plan/: CMakeLists.txt  motion_plan_plugin.xml  package.xml
src/motion_plan/config/: rrt_planning.yaml
src/motion_plan/include/motion_plan/: rrt_core.hpp  rrt_planner_manager.hpp  rrt_planning_context.hpp  rrt_utils.hpp
src/motion_plan/launch/: fr3_sensor_moveit.launch.py
src/motion_plan/src/: rrt_core.cpp  rrt_planner_manager.cpp  rrt_planning_context.cpp
src/policy_server/: package.xml  setup.cfg  setup.py
src/policy_server/config/: policy_server.yaml
src/policy_server/launch/: policy_server.launch.py
src/policy_server/policy_server/: __init__.py  app.py  config.py  server.py
src/policy_server/policy_server/backends/: __init__.py  anygrasp.py  base.py  bc_isaaclab_stack.py  dummy.py  factory.py  openvla.py  python_plugin.py
src/policy_server/rl_policy/bc_cube_stack/: config.json
src/policy_server/rl_policy/bc_cube_stack/logs/: log.txt
src/policy_server/rl_policy/bc_cube_stack/logs/tb/: events.out.tfevents.1779288297.whd-System-Product-Name
src/policy_server/test/: test_anygrasp_backend.py  test_app_dummy_backend.py  test_config_and_factory.py  test_openvla_backend_config.py  test_policy_server_launch.py
(+1212 files in other folders)
